# sequenceprofiler

./: Cargo.toml  README.md
samplefile/longread-sample-files/: fastafile.fasta
src/: args.rs  filestruct.rs  jellyfish.rs  longread.rs  main.rs  sentence.rs  simfilter.rs  similarity.rs
